[package]
name = "mice"
version = "0.3.0"
authors = ["Monadic Cat <greenmonadcat@gmail.com>"]
repository = "https://github.com/Monadic-Cat/mice"
documentation = "https://docs.rs/mice"
description = "messing with dice"
keywords = ["dice", "roll", "parse"]
license = "MIT OR Apache-2.0"
edition = "2018"

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "5.0.0"
rand = "0.7.0"
# wasm-bindgen = "0.2.47"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "my_benchmark"
harness = false
