[package]
name = "mice"
version = "0.3.1"
authors = ["Monadic Cat <greenmonadcat@gmail.com>"]
repository = "https://github.com/Monadic-Cat/mice"
documentation = "https://docs.rs/mice"
description = "messing with dice"
readme = "README.md"
keywords = ["dice", "roll", "parse", "dnd"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "5.0.0"
rand = "0.7.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen  = "0.2.50"
js-sys = "0.3.27"

[dev-dependencies]
criterion = "0.2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.2"

[[bench]]
name = "my_benchmark"
harness = false
